--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -15,6 +15,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
+      - run: npm install
       - run: npm run build --if-present
 
       - name: Azure Login
