--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
-      - run: npm install
-      - run: npm run build --if-present
+      - run: yarn install
+      - run: yarn build
 
       - name: Azure Login
         uses: azure/login@v1
