Copy asset manifest to podlet

--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -11,12 +11,20 @@ jobs:
     steps:
 
       - uses: actions/checkout@v2
-      - name: Build React App
+
+      - name: Setup Node
         uses: actions/setup-node@v1
         with:
           node-version: 16.x
-      - run: yarn install
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Build React App
       - run: yarn build
+
+      - name: Copy asset-manifest.json to podlet
+        run: cp build/asset-manifest.json podlet/
 
       - name: Azure Login
         uses: azure/login@v1
