--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -24,8 +24,8 @@ jobs:
       - name: Build React App
       - run: yarn build
 
-      - name: Copy asset-manifest.json to podlet
-        run: cp build/asset-manifest.json podlet/
+ #     - name: Copy asset-manifest.json to podlet
+  #      run: cp build/asset-manifest.json podlet/
 
       - name: Azure Login
         uses: azure/login@v1
