--- a/podlet/package.json
+++ b/podlet/package.json
@@ -7,8 +7,9 @@
     "start": "node podlet.js"
   },
   "dependencies": {
-    "@fintlabs/fint-podium-react-podlet": "^1.0.6",
-    "@podium/podlet": "^4.4.68",
-    "express": "^4.18.2"
+    "@fintlabs/fint-podium-react-podlet": "^1.2.0",
+    "@podium/podlet": "^4.4.69",
+    "express": "^4.18.2",
+    "log4js": "^6.7.1"
   }
 }
