--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -8,6 +8,13 @@ name: Podlet build and deploy
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
+  ALPHA_CLUSTER_NAME: aks-alpha-fint-2021-11-18
+  ALPHA_CLUSTER_RESOURCE_GROUP: rg-aks-alpha
+  BETA_CLUSTER_NAME: aks-beta-fint-2021-11-23
+  BETA_CLUSTER_RESOURCE_GROUP: rg-aks-beta
+  API_CLUSTER_NAME: aks-api-fint-2022-02-08
+  API_CLUSTER_RESOURCE_GROUP: rg-aks-api
+
 
 jobs:
 
@@ -73,3 +80,27 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      ## Alpha cluster ##
+      - name: Bake alpha manifests with Kustomize
+        uses: azure/k8s-bake@v2.2
+        with:
+          renderEngine: 'kustomize'
+          kustomizationPath: 'kustomize/overlays/alpha'
+        id: bake-alpha
+
+      - name: Set the target Alpha cluster.
+        uses: azure/aks-set-context@v1
+        with:
+          creds: '${{ secrets.AKS_ALPHA_FINT_GITHUB }}'
+          cluster-name: ${{ env.ALPHA_CLUSTER_NAME }}
+          resource-group: ${{ env.ALPHA_CLUSTER_RESOURCE_GROUP }}
+
+      - name: Deploy to Alpha
+        uses: azure/k8s-deploy@v4.4
+        with:
+          manifests: ${{ steps.bake-alpha.outputs.manifestsBundle }}
+          images: |
+            ${{ steps.meta.outputs.tags }}
+          namespace: fintlabs-no
+          action: deploy
