--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -51,12 +51,47 @@ jobs:
         with:
           azcliversion: 2.42.0
           inlineScript: |
+            # Alpha
             az storage blob upload \
-              --file "build/static/js/main.js" \
-              --container-name "alpha/${{ github.event.repository.name }}" \
-              --account-name stflaiscdn \
-              --name main.js \
-              --overwrite
+            --file "build/static/js/main.js" \
+            --container-name "alpha/${{ github.event.repository.name }}" \
+            --account-name stflaiscdn \
+            --name main.js \
+            --overwrite
+            az storage blob upload \
+            --file "build/static/css/main.css" \
+            --container-name "alpha/${{ github.event.repository.name }}" \
+            --account-name stflaiscdn \
+            --name main.css \
+            --overwrite
+            
+            # Beta
+            az storage blob upload \
+            --file "build/static/js/main.js" \
+            --container-name "beta/${{ github.event.repository.name }}" \
+            --account-name stflaiscdn \
+            --name main.js \
+            --overwrite
+            az storage blob upload \
+            --file "build/static/css/main.css" \
+            --container-name "beta/${{ github.event.repository.name }}" \
+            --account-name stflaiscdn \
+            --name main.css \
+            --overwrite
+            
+            # Api
+            az storage blob upload \
+            --file "build/static/js/main.js" \
+            --container-name "api/${{ github.event.repository.name }}" \
+            --account-name stflaiscdn \
+            --name main.js \
+            --overwrite
+            az storage blob upload \
+            --file "build/static/css/main.css" \
+            --container-name "api/${{ github.event.repository.name }}" \
+            --account-name stflaiscdn \
+            --name main.css \
+            --overwrite
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -81,25 +116,48 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      ## Alpha cluster ##
-      - name: Bake alpha manifests with Kustomize
+#      ## Alpha cluster ##
+#      - name: Bake alpha manifests with Kustomize
+#        uses: azure/k8s-bake@v2.2
+#        with:
+#          renderEngine: 'kustomize'
+#          kustomizationPath: 'kustomize/overlays/alpha'
+#        id: bake-alpha
+#
+#      - name: Set the target Alpha cluster.
+#        uses: azure/aks-set-context@v1
+#        with:
+#          creds: '${{ secrets.AKS_ALPHA_FINT_GITHUB }}'
+#          cluster-name: ${{ env.ALPHA_CLUSTER_NAME }}
+#          resource-group: ${{ env.ALPHA_CLUSTER_RESOURCE_GROUP }}
+#
+#      - name: Deploy to Alpha
+#        uses: azure/k8s-deploy@v4.4
+#        with:
+#          manifests: ${{ steps.bake-alpha.outputs.manifestsBundle }}
+#          images: |
+#            ${{ steps.meta.outputs.tags }}
+#          namespace: fintlabs-no
+#          action: deploy
+
+      ## Beta cluster ##
+      - name: Bake beta manifests with Kustomize
         uses: azure/k8s-bake@v2.2
         with:
           renderEngine: 'kustomize'
-          kustomizationPath: 'kustomize/overlays/alpha'
-        id: bake-alpha
-
+          kustomizationPath: 'kustomize/overlays/beta'
+        id: bake-beta
       - name: Set the target Alpha cluster.
         uses: azure/aks-set-context@v1
         with:
-          creds: '${{ secrets.AKS_ALPHA_FINT_GITHUB }}'
-          cluster-name: ${{ env.ALPHA_CLUSTER_NAME }}
-          resource-group: ${{ env.ALPHA_CLUSTER_RESOURCE_GROUP }}
+          creds: '${{ secrets.AKS_BETA_FINT_GITHUB }}'
+          cluster-name: ${{ env.BETA_CLUSTER_NAME }}
+          resource-group: ${{ env.BETA_CLUSTER_RESOURCE_GROUP }}
 
-      - name: Deploy to Alpha
+      - name: Deploy to Beta
         uses: azure/k8s-deploy@v4.4
         with:
-          manifests: ${{ steps.bake-alpha.outputs.manifestsBundle }}
+          manifests: ${{ steps.bake-beta.outputs.manifestsBundle }}
           images: |
             ${{ steps.meta.outputs.tags }}
           namespace: fintlabs-no
