--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -1,24 +1,18 @@
+name: Podlet build and deploy
 
-on: [push]
+on:
+  push:
+    branches:
+      - main
 
 #  workflow_dispatch:
-
-name: Podlet build and deploy
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  ALPHA_CLUSTER_NAME: aks-alpha-fint-2021-11-18
-  ALPHA_CLUSTER_RESOURCE_GROUP: rg-aks-alpha
-  BETA_CLUSTER_NAME: aks-beta-fint-2021-11-23
-  BETA_CLUSTER_RESOURCE_GROUP: rg-aks-beta
-  API_CLUSTER_NAME: aks-api-fint-2022-02-08
-  API_CLUSTER_RESOURCE_GROUP: rg-aks-api
-
 
 jobs:
-
-  build-and-deploy:
+  build-and-deploy-to-cdn:
     runs-on: ubuntu-latest
     steps:
 
@@ -53,6 +47,7 @@ jobs:
           inlineScript: |
             chmod +x $GITHUB_WORKSPACE/upload-assets.sh
             $GITHUB_WORKSPACE/upload-assets.sh
+            
 
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
@@ -77,49 +72,100 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-#      ## Alpha cluster ##
-#      - name: Bake alpha manifests with Kustomize
-#        uses: azure/k8s-bake@v2.2
-#        with:
-#          renderEngine: 'kustomize'
-#          kustomizationPath: 'kustomize/overlays/alpha'
-#        id: bake-alpha
-#
-#      - name: Set the target Alpha cluster.
-#        uses: azure/aks-set-context@v1
-#        with:
-#          creds: '${{ secrets.AKS_ALPHA_FINT_GITHUB }}'
-#          cluster-name: ${{ env.ALPHA_CLUSTER_NAME }}
-#          resource-group: ${{ env.ALPHA_CLUSTER_RESOURCE_GROUP }}
-#
-#      - name: Deploy to Alpha
-#        uses: azure/k8s-deploy@v4.4
-#        with:
-#          manifests: ${{ steps.bake-alpha.outputs.manifestsBundle }}
-#          images: |
-#            ${{ steps.meta.outputs.tags }}
-#          namespace: fintlabs-no
-#          action: deploy
+  build-and-push:
+    name: Build and push Docker image
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
+    outputs:
+      tags: ${{ steps.meta.outputs.tags }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      ## Beta cluster ##
-      - name: Bake beta manifests with Kustomize
-        uses: azure/k8s-bake@v2.2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        uses: docker/metadata-action@v5
+        id: meta
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: type=sha,enable=true,priority=100,prefix=sha-,suffix=,format=short
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+  deploy-to-aks:
+    name: deploy for ${{ matrix.org }} to ${{ matrix.cluster }}
+    runs-on: ubuntu-latest
+    needs: build-and-push
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      matrix:
+        include:
+          - org: fintlabs-no
+            cluster: aks-beta-fint-2021-11-23
+          - org: ofk-no
+            cluster: aks-api-fint-2022-02-08
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Get environment
+        uses: actions/github-script@v6
+        id: environment
+        with:
+          script: return '${{ matrix.cluster }}'.split('-')[1]
+          result-encoding: string
+
+      - name: Get resource group name
+        uses: actions/github-script@v6
+        id: resource-group
+        with:
+          script: return 'rg-aks-${{ steps.environment.outputs.result }}'
+          result-encoding: string
+
+      - name: Bake manifests with Kustomize
+        id: bake
+        uses: azure/k8s-bake@v2.4
         with:
           renderEngine: 'kustomize'
-          kustomizationPath: 'kustomize/overlays/beta'
-        id: bake-beta
-      - name: Set the target Alpha cluster.
-        uses: azure/aks-set-context@v1
-        with:
-          creds: '${{ secrets.AKS_BETA_FINT_GITHUB }}'
-          cluster-name: ${{ env.BETA_CLUSTER_NAME }}
-          resource-group: ${{ env.BETA_CLUSTER_RESOURCE_GROUP }}
+          kustomizationPath: 'kustomize/overlays/${{ steps.environment.outputs.result }}/${{ matrix.org }}'
 
-      - name: Deploy to Beta
-        uses: azure/k8s-deploy@v4.4
+      - uses: azure/login@v1
         with:
-          manifests: ${{ steps.bake-beta.outputs.manifestsBundle }}
-          images: |
-            ${{ steps.meta.outputs.tags }}
-          namespace: fintlabs-no
+          creds: "${{ secrets[format('AKS_{0}_FINT_GITHUB', steps.environment.outputs.result)] }}"
+
+      - uses: azure/use-kubelogin@v1.1
+        with:
+          kubelogin-version: 'v0.0.26'
+
+      - name: Set the target cluster
+        uses: azure/aks-set-context@v3
+        with:
+          cluster-name: '${{ matrix.cluster }}'
+          resource-group: '${{ steps.resource-group.outputs.result }}'
+          admin: 'true'
+          use-kubelogin: 'true'
+
+      - name: Deploy
+        uses: azure/k8s-deploy@v4.9
+        with:
           action: deploy
+          manifests: ${{ steps.bake.outputs.manifestsBundle }}
+          images: ${{ needs.build-and-push.outputs.tags }}
+          namespace: ${{ matrix.org }}
