--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -76,7 +76,7 @@ jobs:
   deploy-to-aks:
     name: deploy for ${{ matrix.org }} to ${{ matrix.cluster }}
     runs-on: ubuntu-latest
-    needs: build-and-push
+    needs: build-and-deploy-to-cdn
     permissions:
       contents: read
       packages: write
