--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -134,5 +134,5 @@ jobs:
         with:
           action: deploy
           manifests: ${{ steps.bake.outputs.manifestsBundle }}
-          images: ${{ needs.build-and-deploy-to-cdn.outputs.tags }}
+          images: ${{ needs.build-and-deploy-to-cdn.meta.outputs.tags }}
           namespace: ${{ matrix.org }}
