--- a/.github/workflows/CD.yaml
+++ b/.github/workflows/CD.yaml
@@ -16,10 +16,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3.3.0
 
       - name: Setup Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: 16.x
 
@@ -49,6 +49,28 @@ jobs:
             $GITHUB_WORKSPACE/upload-assets.sh
             
 
+      
+
+
+  deploy-to-aks:
+    name: deploy for ${{ matrix.org }} to ${{ matrix.cluster }}
+    runs-on: ubuntu-latest
+   # needs: build-and-deploy-to-cdn
+    permissions:
+      contents: read
+      packages: write
+    strategy:
+      matrix:
+        include:
+          - org: fintlabs-no
+            cluster: aks-beta-fint-2021-11-23
+          - org: ofk-no
+            cluster: aks-api-fint-2022-02-08
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Log in to the Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
@@ -71,26 +93,6 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-
-  deploy-to-aks:
-    name: deploy for ${{ matrix.org }} to ${{ matrix.cluster }}
-    runs-on: ubuntu-latest
-    needs: build-and-deploy-to-cdn
-    permissions:
-      contents: read
-      packages: write
-    strategy:
-      matrix:
-        include:
-          - org: fintlabs-no
-            cluster: aks-beta-fint-2021-11-23
-          - org: ofk-no
-            cluster: aks-api-fint-2022-02-08
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
       - name: Get environment
         uses: actions/github-script@v6
@@ -134,5 +136,5 @@ jobs:
         with:
           action: deploy
           manifests: ${{ steps.bake.outputs.manifestsBundle }}
-          images: ${{ needs.build-and-deploy-to-cdn.meta.outputs.tags }}
+          images: ${{ steps.meta.outputs.tags }}
           namespace: ${{ matrix.org }}
