--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^16.18.3",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.9",
+    "axios": "^1.6.2",
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -28,7 +29,8 @@
     "build": "react-scripts build",
     "podlet-start": "node podlet/podlet.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "port-forward-user": "kubectl -n fintlabs-no port-forward services/fint-kontroll-user-catalog 8062:8080"
   },
   "eslintConfig": {
     "extends": [
