--- a/kustomize/base/application.yaml
+++ b/kustomize/base/application.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   port: 7100
   orgId: fintlabs.no
-  image: ghcr.io/fintlabs/fint-kontroll-appbar-pod:sha-0000000
+  image: ghcr.io/fintlabs/fint-kontroll-appbar-pod
   prometheus:
     enabled: true
     port: "7100"
